fix: Fix word wrapping in dropdown menu items (no-changelog) (#6874)

--- a/packages/design-system/src/css/dropdown.scss
+++ b/packages/design-system/src/css/dropdown.scss
@@ -95,6 +95,7 @@
 		color: var(--color-text-dark);
 		cursor: pointer;
 		outline: none;
+		white-space: nowrap;
 		&:not(.is-disabled):hover,
 		&:focus {
 			background-color: var.$dropdown-menuItem-hover-fill;
